@@ -1,3 +1,0 @@
-# File name	Caller	Syscall name	# args	Strong name	Weak names
-
-waitpid		-	waitpid		Ci:ipi	__waitpid	waitpid
